[project]
name = "slab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ixi2101", email = "77992676+ixi2101@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "typer>=0.16.0",
    "loguru>=0.7.2",
]

[project.scripts]
slab = "slab:main"

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"
